push on main changes services

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/web_cpns_flutter/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,20 +34,6 @@
 </head>
 <body>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script>
-    const firebaseConfig = {
-  apiKey: "AIzaSyCvr6oTlNreK2Boy1X__b892VfQcv7Ojvc",
-  authDomain: "cpnsjourney.firebaseapp.com",
-  projectId: "cpnsjourney",
-  storageBucket: "cpnsjourney.appspot.com",
-  messagingSenderId: "747420836978",
-  appId: "1:747420836978:web:c40cd16c7a84ba4b79ceeb",
-  measurementId: "G-WSS16962QE"
-};
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
