--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
 </head>
 <body>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script>
+ 
+    var firebaseConfig = {
+  apiKey: "AIzaSyASJ1hpc4S_lkF59gazVcjLzs6Ggh4EHls",
+  authDomain: "web-cpns.firebaseapp.com",
+  projectId: "web-cpns",
+  storageBucket: "web-cpns.appspot.com",
+  messagingSenderId: "733420695429",
+  appId: "1:733420695429:web:566fec2d5c06859b7e9eec",
+  measurementId: "G-EWYEN03BBY"
+};
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
